--- a/index.html
+++ b/index.html
@@ -1,8 +1,65 @@
 
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Project Name</title>
+    <style>
+  body { font-family: Arial, sans-serif; }
+  .container { width: 80%; margin: auto; }
+  .header { text-align: center; }
+  .navigation { background-color: #f4f4f4; padding: 10px 0; }
+  .navigation a { padding: 15px 20px; text-decoration: none; color: #333; }
+  .content { background: #fff; padding: 20px; margin-top: 20px; }
+  .footer { background-color: #333; color: #fff; text-align: center; padding: 10px 0; }
+  .card { box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); transition: 0.3s; padding: 16px; text-align: center; }
+</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<div class="container">
+    <div class="header">
+        <h1>Your Project Name</h1>
+        <p>Short description about your project</p>
+    </div>
+
+    <div class="navigation">
+        <a href="#home">Home</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </div>
+
+    <div id="home" class="content">
+        <h2>Welcome!</h2>
+        <p>Welcome to my personal project page. Here you will find information about what I've been working on.</p>
+    </div>
+
+    <div id="projects" class="content">
+        <h2>My Projects</h2>
+        <div class="card">
+            <h3>Project 1</h3>
+            <p>Short description of Project 1</p>
+        </div>
+        <div class="card">
+            <h3>Project 2</h3>
+            <p>Short description of Project 2</p>
+        </div>
+    </div>
+
+    <div id="contact" class="content">
+        <h2>Contact Me</h2>
+        <p>Email: your-email@example.com</p>
+        <p>Discord: YourDiscord#1234</p>
+        <p>Phone: +123 456 7890</p>
+    </div>
+
+    <div class="footer">
+        <p>Your Project Name © 2023.</p>
+    </div>
+</div>
+
 </body>
 </html>
+
