--- a/index.html
+++ b/index.html
@@ -5,60 +5,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Project Name</title>
+    <title>Princess Cut Loose - Royal DollHouse Studio</title>
     <style>
-  body { font-family: Arial, sans-serif; }
-  .container { width: 80%; margin: auto; }
-  .header { text-align: center; }
-  .navigation { background-color: #f4f4f4; padding: 10px 0; }
-  .navigation a { padding: 15px 20px; text-decoration: none; color: #333; }
-  .content { background: #fff; padding: 20px; margin-top: 20px; }
-  .footer { background-color: #333; color: #fff; text-align: center; padding: 10px 0; }
-  .card { box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); transition: 0.3s; padding: 16px; text-align: center; }
-</style>
+        body { font-family: Arial, sans-serif; }
+        .container { width: 80%; margin: auto; }
+        .header { text-align: center; }
+        .navigation { background-color: #f4f4f4; padding: 10px 0; }
+        .navigation a { padding: 15px 20px; text-decoration: none; color: #333; }
+        .content { background: #fff; padding: 20px; margin-top: 20px; }
+        .footer { background-color: #333; color: #fff; text-align: center; padding: 10px 0; }
+        .card { box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); transition: 0.3s; padding: 16px; text-align: center; }
+        .custom-footer { text-align: center; margin-top: 30px; }
+    </style>
 </head>
 <body>
 
 <div class="container">
     <div class="header">
-        <h1>Your Project Name</h1>
-        <p>Short description about your project</p>
+        <h1>Princess Cut Loose</h1>
+        <p>[Royal DollHouse Studio]</p>
+        <p>Welcome to my GitHub Wiki page! Here you can find information about our projects.</p>
     </div>
 
     <div class="navigation">
         <a href="#home">Home</a>
-        <a href="#projects">Projects</a>
+        <a href="#projects">Our Projects</a>
         <a href="#contact">Contact</a>
     </div>
 
     <div id="home" class="content">
         <h2>Welcome!</h2>
-        <p>Welcome to my personal project page. Here you will find information about what I've been working on.</p>
+        <p>This is the main page for the Princess Cut Loose project by Royal DollHouse Studio. Dive into our creative world and explore our projects listed below.</p>
     </div>
 
     <div id="projects" class="content">
-        <h2>My Projects</h2>
+        <h2>Our Projects</h2>
         <div class="card">
-            <h3>Project 1</h3>
-            <p>Short description of Project 1</p>
+            <h3>Brainstorm</h3>
+            <p>An initial phase where we gather ideas and inspiration for our doll designs.</p>
         </div>
         <div class="card">
-            <h3>Project 2</h3>
-            <p>Short description of Project 2</p>
+            <h3>Scrum</h3>
+            <p>A collaborative effort to organize and prioritize the development process of our creations.</p>
+        </div>
+        <div class="card">
+            <h3>Pitch</h3>
+            <p>Our presentation of the project ideas to potential collaborators and clients.</p>
+        </div>
+        <div class="card">
+            <h3>Prototype</h3>
+            <p>The first tangible version of our dolls, ready for review and refinement.</p>
+        </div>
+        <div class="custom-footer">
+            <p>Add a custom footer</p>
         </div>
     </div>
 
     <div id="contact" class="content">
-        <h2>Contact Me</h2>
-        <p>Email: your-email@example.com</p>
-        <p>Discord: YourDiscord#1234</p>
-        <p>Phone: +123 456 7890</p>
+        <h2>Contact Us</h2>
+        <p>Email: RoyalDollStudio@gmail.com</p>
+        <p>Discord: https://discord.gg/RoyalDollHouse</p>
+        <p>Phone: +353 345 6789</p>
+        <div class="custom-footer">
+            <p>Add a custom footer</p>
+        </div>
     </div>
 
     <div class="footer">
-        <p>Your Project Name © 2023.</p>
+        <p>Royal DollHouse Studio © 2023. All rights reserved.</p>
     </div>
 </div>
+
+</body>
+</html>
 
 </body>
 </html>
