--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Project Name</title>
+    <title></title>
     <style>
   body { font-family: Arial, sans-serif; }
   .container { width: 80%; margin: auto; }
