--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <div id="contact" class="content">
-        <h2>Contact Us</h2>
+        <h2>Contact us</h2>
         <p>Email: RoyalDollStudio@gmail.com</p>
         <p>Discord: https://discord.gg/RoyalDollHouse</p>
         <p>Phone: +353 345 6789</p>
