--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>Our Projects</h2>
         <div class="card">
             <h3>Brainstorm</h3>
-            <p>An initial phase where we gather ideas and inspiration for our doll designs. <a href="https://trello.com/invite/b/Ltjk3VGG/ATTI7ed3aaf823ff040647e16cfeaaf4c6631F6C4C75/game-design-brainstorm" target="_blank">Project Board.</a></p>
+             <a href="https://trello.com/invite/b/Ltjk3VGG/ATTI7ed3aaf823ff040647e16cfeaaf4c6631F6C4C75/game-design-brainstorm" target="_blank">Project Board.</a>
         </div>
         <div class="card">
             <h3>Scrum</h3>
