--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="projects" class="content">
         <h2>Our Projects</h2>
         <div class="card">
-            <h3>Brainstorm</h3>
+            <h3>Brainstorm.</h3>
              <a href="https://trello.com/invite/b/Ltjk3VGG/ATTI7ed3aaf823ff040647e16cfeaaf4c6631F6C4C75/game-design-brainstorm" target="_blank">Project Board.</a>
         </div>
         <div class="card">
