--- a/index.html
+++ b/index.html
@@ -39,20 +39,13 @@
     <div id="projects" class="content">
         <h2>Our Projects</h2>
         <div class="card">
-            <h3>Brainstorm.</h3>
-             <a href="https://trello.com/invite/b/Ltjk3VGG/ATTI7ed3aaf823ff040647e16cfeaaf4c6631F6C4C75/game-design-brainstorm" target="_blank">Project Board.</a>
+            <h3><a href="https://trello.com/invite/b/Ltjk3VGG/ATTI7ed3aaf823ff040647e16cfeaaf4c6631F6C4C75/game-design-brainstorm" target="_blank">Brainstorm</a></h3>
         </div>
         <div class="card">
-            <h3>Scrum</h3>
-            <p>A collaborative effort to organize and prioritize the development process of our creations.</p>
+            <h3><a href="https://trello.com/invite/b/bMMvYeaw/ATTI4a7631e961abc5cc88c348f6e0c2ae86D6ADACAA/game-design-scrum" target="_blank">Scrum</a></h3>
         </div>
         <div class="card">
-            <h3>Pitch</h3>
-            <p>Our presentation of the project ideas to potential collaborators and clients.</p>
-        </div>
-        <div class="card">
-            <h3>Prototype</h3>
-            <p>The first tangible version of our dolls, ready for review and refinement.</p>
+            <h3><a href="https://youtu.be/-6we16pu7AU" target="_blank">Pitch</a></h3>
         </div>
     </div>
 
