--- a/index.html
+++ b/index.html
@@ -5,15 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Princess Cut Loose - Royal DollHouse Studio</title>
     <style>
-        body { font-family: Arial, sans-serif; }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0e6f6; /* Light lavender */
+            color: #333333; /* Dark gray for text */
+        }
         .container { width: 80%; margin: auto; }
-        .header { text-align: center; }
-        .navigation { background-color: #f4f4f4; padding: 10px 0; }
-        .navigation a { padding: 15px 20px; text-decoration: none; color: #333; }
-        .content { background: #fff; padding: 20px; margin-top: 20px; }
-        .footer { background-color: #333; color: #fff; text-align: center; padding: 10px 0; }
-        .card { box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); transition: 0.3s; padding: 16px; text-align: center; }
-        .custom-footer { text-align: center; margin-top: 30px; }
+        .header {
+            text-align: center;
+            background-color: #8a2be2; /* Royal purple */
+            color: #ffffff; /* White for text */
+            padding: 20px 0;
+        }
+        .navigation {
+            background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); /* Gradient from purple to blue */
+            padding: 10px 0;
+        }
+        .navigation a {
+            padding: 15px 20px;
+            text-decoration: none;
+            color: #fff; /* White text */
+            transition: background-color 0.3s;
+        }
+        .navigation a:hover {
+            background-color: rgba(255, 255, 255, 0.2); /* Light hover effect */
+        }
+        .content {
+            background: #fff;
+            padding: 20px;
+            margin-top: 20px;
+            border: 1px solid #ddd; /* Light gray border */
+        }
+        .footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        .card {
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            transition: 0.3s;
+            padding: 16px;
+            text-align: center;
+            background-color: #f9f9f9; /* Very light gray */
+            margin-bottom: 20px; /* Space between cards */
+        }
+        .custom-footer {
+            text-align: center;
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
@@ -53,7 +93,7 @@
         <h2>Contact us</h2>
         <p>Email: RoyalDollStudio@gmail.com</p>
         <p>Discord: https://discord.gg/RoyalDollHouse</p>
-        <p>Phone: +353 345 6789</p>
+        <p>Phone: +353 345 6789.</p>
     </div>
 
     <div class="footer">
