--- a/index.html
+++ b/index.html
@@ -7,52 +7,34 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0e6f6; /* Light lavender */
-            color: #333333; /* Dark gray for text */
+            background-color: #f0e6f6;
+            color: #333333;
         }
         .container { width: 80%; margin: auto; }
-        .header {
+
+
+        .header, .navigation, .content, .footer, .card {
+            background-color: #8a2be2;
+            color: #ffffff;
             text-align: center;
-            background-color: #8a2be2; /* Royal purple */
-            color: #ffffff; /* White for text */
-            padding: 20px 0;
+            padding: 20px;
+            margin-bottom: 20px;
         }
-        .navigation {
-            background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); /* Gradient from purple to blue */
-            padding: 10px 0;
-        }
+
+
         .navigation a {
             padding: 15px 20px;
             text-decoration: none;
-            color: #fff; /* White text */
+            color: #fff;
             transition: background-color 0.3s;
         }
         .navigation a:hover {
-            background-color: rgba(255, 255, 255, 0.2); /* Light hover effect */
+            background-color: rgba(255, 255, 255, 0.2);
         }
-        .content {
-            background: #fff;
-            padding: 20px;
-            margin-top: 20px;
-            border: 1px solid #ddd; /* Light gray border */
-        }
-        .footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-        }
-        .card {
+
+        .content, .card {
+            border: 1px solid #ddd;
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            padding: 16px;
-            text-align: center;
-            background-color: #f9f9f9; /* Very light gray */
-            margin-bottom: 20px; /* Space between cards */
-        }
-        .custom-footer {
-            text-align: center;
-            margin-top: 30px;
         }
     </style>
 </head>
