--- a/index.html
+++ b/index.html
@@ -11,30 +11,48 @@
             color: #333333;
         }
         .container { width: 80%; margin: auto; }
-
-
-        .header, .navigation, .content, .footer, .card {
-            background-color: #8a2be2;
-            color: #ffffff;
+        .header {
             text-align: center;
-            padding: 20px;
-            margin-bottom: 20px;
+            background-color: #8a2be2; /* Royal purple */
+            color: #ffffff; /* White for text */
+            padding: 20px 0;
         }
-
-
+        .navigation {
+            background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); /* Gradient from purple to blue */
+            padding: 10px 0;
+        }
         .navigation a {
             padding: 15px 20px;
             text-decoration: none;
-            color: #fff;
+            color: #fff; /* White text */
             transition: background-color 0.3s;
         }
         .navigation a:hover {
-            background-color: rgba(255, 255, 255, 0.2);
+            background-color: rgba(255, 255, 255, 0.2); /* Light hover effect */
         }
-
-        .content, .card {
-            border: 1px solid #ddd;
+        .content {
+            background: #fff;
+            padding: 20px;
+            margin-top: 20px;
+            border: 1px solid #ddd; /* Light gray border */
+        }
+        .footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        .card {
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            transition: 0.3s;
+            padding: 16px;
+            text-align: center;
+            background-color: #f9f9f9; /* Very light gray */
+            margin-bottom: 20px; /* Space between cards */
+        }
+        .custom-footer {
+            text-align: center;
+            margin-top: 30px;
         }
     </style>
 </head>
