--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             background-color: rgba(255, 255, 255, 0.2); /* Light hover effect */
         }
         .content {
-            background: #fff;
+            background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); /* Applying gradient from navigation */
+            color: #fff; /* White text for better visibility */
             padding: 20px;
             margin-top: 20px;
             border: 1px solid #ddd; /* Light gray border */
