--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0e6f6;
+            background-color: #f9f0f6; /* Very light purple */
             color: #333333;
         }
         .container { width: 80%; margin: auto; }
         .header {
             text-align: center;
-            background-color: #8a2be2; /* Royal purple */
+            background-color: #9473e6; /* Softer shade of purple */
             color: #ffffff; /* White for text */
             padding: 20px 0;
+            border-bottom: 5px solid #6a11cb; /* Dark purple border for contrast */
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* subtle shadow for depth */
         }
         .navigation {
             background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); /* Gradient from purple to blue */
