--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f0f6; /* Very light purple */
+            background-color: #f4e8fb; /* Very light purple */
             color: #333333;
         }
         .container { width: 80%; margin: auto; }
@@ -65,7 +65,7 @@
     <div class="header">
         <h1>Princess Cut Loose</h1>
         <p>[Royal DollHouse Studio]</p>
-        <p>Welcome to my GitHub Wiki page! Here you can find information about our projects.</p>
+        <p>Welcome to my GitHub page! Here you can find information about our projects.</p>
     </div>
 
     <div class="navigation">
