--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4e8fb; /* Very light purple */
+            background-color: #eae2f8; /* Very light purple */
             color: #333333;
         }
         .container { width: 80%; margin: auto; }
