--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
         .container { width: 80%; margin: auto; }
         .header {
             text-align: center;
-            background-color: #9473e6; /* Softer shade of purple */
-            color: #ffffff; /* White for text */
+            background-color: #9473e6;
+            color: #ffffff;
             padding: 20px 0;
-            border-bottom: 5px solid #6a11cb; /* Dark purple border for contrast */
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* subtle shadow for depth */
+            border-bottom: 5px solid #6a11cb;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
         .navigation {
-            background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); /* Gradient from purple to blue */
+            background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
             padding: 10px 0;
         }
         .navigation a {
             padding: 15px 20px;
             text-decoration: none;
-            color: #fff; /* White text */
+            color: #fff;
             transition: background-color 0.3s;
         }
         .navigation a:hover {
-            background-color: rgba(255, 255, 255, 0.2); /* Light hover effect */
+            background-color: rgba(255, 255, 255, 0.2);
         }
         .content {
-            background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); /* Applying gradient from navigation */
-            color: #fff; /* White text for better visibility */
+            background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+            color: #fff;
             padding: 20px;
             margin-top: 20px;
-            border: 1px solid #ddd; /* Light gray border */
+            border: 1px solid #ddd;
         }
         .footer {
             background-color: #333;
@@ -50,8 +50,8 @@
             transition: 0.3s;
             padding: 16px;
             text-align: center;
-            background-color: #f9f9f9; /* Very light gray */
-            margin-bottom: 20px; /* Space between cards */
+            background-color: #f9f9f9;
+            margin-bottom: 20px;
         }
         .custom-footer {
             text-align: center;
